<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.adigastudio.kodesoalguru.viewmodels.SettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setting_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar"
            app:title="@{@string/setting_fragment}"/>

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/ad_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/edit_text_padding_medium">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/button_account"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_attr_height"
                    android:onClick="@{(v) -> viewModel.onClicked(viewModel.callback, v)}">

                    <TextView
                        android:id="@+id/text_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/account"
                        android:textColor="@android:color/black"
                        app:layout_constraintBottom_toTopOf="@+id/text_account_descrption"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_account_descrption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/account_description"
                        app:layout_constraintBottom_toTopOf="@+id/view"
                        app:layout_constraintStart_toStartOf="@id/text_account"
                        app:layout_constraintTop_toBottomOf="@+id/text_account" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_keyboard_arrow_right_24dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/separator"
                        android:background="@color/colorSeparator"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/button_terms"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_attr_height"
                    android:onClick="@{(v) -> viewModel.onClicked(viewModel.callback, v)}">

                    <TextView
                        android:id="@+id/text_tos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/tos"
                        android:textColor="@android:color/black"
                        app:layout_constraintBottom_toTopOf="@+id/text_tos_description"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_tos_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/tos_description"
                        app:layout_constraintBottom_toTopOf="@+id/view3"
                        app:layout_constraintStart_toStartOf="@id/text_tos"
                        app:layout_constraintTop_toBottomOf="@+id/text_tos" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_keyboard_arrow_right_24dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/view3"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/separator"
                        android:background="@color/colorSeparator"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/button_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_attr_height"
                    android:onClick="@{(v) -> viewModel.onClicked(viewModel.callback, v)}">

                    <TextView
                        android:id="@+id/text_privacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/privacy_policy"
                        android:textColor="@android:color/black"
                        app:layout_constraintBottom_toTopOf="@+id/text_privacy_description"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_privacy_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/privacy_policy_description"
                        app:layout_constraintBottom_toTopOf="@+id/view4"
                        app:layout_constraintStart_toStartOf="@id/text_privacy"
                        app:layout_constraintTop_toBottomOf="@+id/text_privacy" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_keyboard_arrow_right_24dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/view4"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/separator"
                        android:background="@color/colorSeparator"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/button_review"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_attr_height"
                    android:onClick="@{(v) -> viewModel.onClicked(viewModel.callback, v)}">

                    <TextView
                        android:id="@+id/text_review"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/review"
                        android:textColor="@android:color/black"
                        app:layout_constraintBottom_toTopOf="@+id/text_review_description"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_review_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/review_description"
                        app:layout_constraintBottom_toTopOf="@+id/view5"
                        app:layout_constraintStart_toStartOf="@id/text_review"
                        app:layout_constraintTop_toBottomOf="@+id/text_review" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_keyboard_arrow_right_24dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/view5"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/separator"
                        android:background="@color/colorSeparator"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/button_exit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_attr_height"
                    android:onClick="@{(v) -> viewModel.onClicked(viewModel.callback, v)}">

                    <ImageView
                        android:id="@+id/image_exit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/ic_exit_to_app_24dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/logout"
                        android:textColor="@android:color/black"
                        app:layout_constraintBottom_toBottomOf="@+id/image_exit"
                        app:layout_constraintStart_toEndOf="@id/image_exit"
                        app:layout_constraintTop_toTopOf="@+id/image_exit" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/separator"
                        android:background="@color/colorSeparator"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ad_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/ad_unit_banner"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>