<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="exam"
            type="com.adigastudio.kodesoalguru.models.Exam" />

        <variable
            name="viewModel"
            type="com.adigastudio.kodesoalguru.viewmodels.QuestionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/question_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar"
            app:title="@{exam.subject}"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="false"
            app:cardCornerRadius="0dp"
            app:cardBackgroundColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_padding_medium"
                android:layout_marginBottom="@dimen/edit_text_padding_medium">

                <com.adigastudio.kodesoalguru.utils.ClearableEditText
                    android:id="@+id/edit_search"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:image="@drawable/ic_search_black_24dp"
                    app:hint="Cari pertanyaan, jawaban atau kompetensi dasar"
                    app:bg="@drawable/shape_rounded_rectangle_info"
                    android:layout_marginRight="@dimen/edit_text_padding_medium"
                    android:layout_marginBottom="@dimen/edit_text_padding_medium"
                    android:layout_marginLeft="@dimen/edit_text_padding_medium"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_search">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/ad_view"/>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_empty_data"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/ad_view"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/image_exam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_assignment_96dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/no_data"
                        android:textColor="@color/colorLabel"
                        android:textSize="@dimen/text_view_font_size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/image_exam" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.gms.ads.AdView
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/ad_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ads:adSize="SMART_BANNER"
                    ads:adUnitId="@string/ad_unit_banner"
                    ads:layout_constraintBottom_toBottomOf="parent"
                    ads:layout_constraintEnd_toEndOf="parent"
                    ads:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shimmer_auto_start="false">

            <include
                layout="@layout/shimmer_exam_fragment"/>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:id="@+id/image_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_error_96dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/error_no_connetion"
                android:textColor="@color/colorLabel"
                android:textSize="@dimen/text_view_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_error" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>